# Munajjam

./: .gitignore  README.md  pr56-review.md  pr59-review.md  pr60-review.md  pr61-review.md  pr62-review.md  pr63-review.md  pr64-review.md  pr65-review.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_basic_usage.py  01_simple_alignment.py
munajjam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
munajjam/examples/: basic_usage.py
munajjam/munajjam/: __init__.py  __main__.py  _version.py  cli.py  formatters.py
tests/: test_cli.py  test_examples.py
tests/unit/: test_aligner.py  test_formatters.py
